--- a/program3-criley13/app/src/main/res/layout/fragment_start.xml
+++ b/program3-criley13/app/src/main/res/layout/fragment_start.xml
@@ -37,14 +37,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Advertise"/>
+            android:text="Host Game/Server" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Discovery"/>
+            android:text="Join Game/Client" />
 
     </LinearLayout>
 
