--- a/program3-criley13/app/src/main/res/layout/fragment_start.xml
+++ b/program3-criley13/app/src/main/res/layout/fragment_start.xml
@@ -6,30 +6,15 @@
     android:orientation="vertical"
     tools:context="edu.cs4735.program3.StartFragment">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="This is the help screen\n
-           Click  Nearby Discovery (client) code or Nearby Advertise (Server) code.\n
-           This also checks if the permissions for course location.\n"/>
-
     <Button
         android:id="@+id/btn_permi"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Check permissions"/>
 
-    <TextView
-        android:id="@+id/logger1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
-
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="bottom">
 
         <Button
@@ -45,6 +30,34 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Join Game/Client" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/logger1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom">
+
+        <Button
+            android:id="@+id/agreeBut"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Agree" />
+
+        <Button
+            android:id="@+id/disagreeBut"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Disagree" />
 
     </LinearLayout>
 
